--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="retro">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="./style/style.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css" />
     <title>Explore Khalamoni</title>
 
     <style>
@@ -20,10 +21,24 @@
     <h1 class="text-3xl text-center py-10 font-bold underline color-clifford">
         Hello World
     </h1>
-    <div class="text-center">
-        <button class="px-8 py-3 bg-orange-300 cursor-pointer
-        hover:bg-orange-500 active:scale-95 transition-all duration-200">Click Me</button>
+    <div class="text-center bg-primary/10">
+        <!-- <button class="px-8 py-3 bg-orange-300 cursor-pointer
+        hover:bg-orange-500 active:scale-95 transition-all duration-200">Click Me</button> -->
+        <button class="btn btn-primary w-80 rounded-full">Click Me</button>
+        <button class="btn btn-error">Click Me</button>
+        <button class="btn btn-secondary btn-xl">Click Me</button>
+        <button class="btn btn-warning">Click Me</button>
+        <button class="btn btn-accent btn-outline">Click Me</button>
+        <button class="btn btn-neutral btn-soft">Click Me</button>
     </div>
+
+    <details class="dropdown">
+        <summary class="btn m-1">open or close</summary>
+        <ul class="menu dropdown-content bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+            <li><a>J Kono kichu 1</a></li>
+            <li><a>J Kono kichu 2</a></li>
+        </ul>
+    </details>
 </body>
 
 </html>
